--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -9,7 +9,7 @@ header {
     width: 100%;
     height: 7vh;
     align-items: center;
-    background-color: rgb(6,6,6);
+    background-color: #131313;
 }
 
 .wrapper {
@@ -26,59 +26,48 @@ header {
 /* HOME/INTRO PAGE STYLE */
 
 .intro {
-    background: linear-gradient(  rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url("/src/Assets/images/bg-intro.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
     height: 93vh;
-    color: white;
+    color: #131313;
 }
 
 .intro-wrapper {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    height: 100vh;
     justify-content: space-between;
-    padding: 2.5em;
+    padding: 1.5em 2.5em;
+    background: #131313;
 }
 
-.intro-grid {
-    margin-top: 7.5em;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    align-items: start;
+.intro-flex {
+    display: flex;
+    background-image: url("/src/Assets/images/intro-slide2.jpg");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .intro-text__hero {
-    grid-area: 1 / 1 / 2 / 2;
+    background: linear-gradient(90deg, rgba(255,255,255,1) 50%, rgba(255,255,255,0.6054796918767507) 100%);;
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+    align-content: center;
+    width: 40%;
+    padding: 7.5em 2.5em 16.3em;
+    box-shadow: 20px 60px 60px #d9d9d9, 0px 0px 0px #ffffff;
 }
 
 .intro-text__hero h1 {
     font-size: 25vh;
     font-weight: 100;
-    margin: 0;
-}
-
-
-.intro-text__hero h1:last-child {
-    font-size: 10vh;
-    font-style: italic;
-    font-weight: 100;
-    margin-left: -35px;
+    margin: 0 0 0 -20px;
 }
 
 .intro-text__after {
-    grid-area: 2 / 2 / 3 / 3;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -104,6 +93,8 @@ header {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     justify-items: center;
+    color: white;
+    align-items: center;
 }
 
 .intro-social__wrapper {
@@ -113,25 +104,51 @@ header {
     width: 18.75em;
 }
 
-.intro-scroll {
-    border-radius: 50px;
-    background: rgba(6,6,6, 0.8);
-    color: white;
-    box-shadow: 5px 5px 50px rgba(150, 150, 150, 0.5), -5px -5px 50px rgba(0, 0, 0, 0.5);
-    border: none;
-    padding: 20px 40px;
+.scroll {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.intro-scroll:hover {
+.scroll-down__text {
     text-transform: uppercase;
-    font-weight: bold;
-    color: white;
-    border-radius: 50px;
-    background: linear-gradient(145deg, #00FFFF, #004c4c);
-    box-shadow:  20px 20px 60px #004c4c,
-    -20px -20px 60px #00FFFF;
-    transform: scale(1.05);
-    transition: 200ms;
+}
+
+.scroll-down {
+    bottom: 10px;
+    display: block;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    width: 13px;
+    height: 13px;
+    border-bottom: 2px solid #fff;
+    border-right: 2px solid #fff;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0%) rotate(45deg);
+    -moz-transform: translate(-50%, 0%) rotate(45deg);
+    transform: translate(-50%, 0%) rotate(45deg);
+    -webkit-animation: fade_move_down 4s ease-in-out infinite;
+    -moz-animation:    fade_move_down 4s ease-in-out infinite;
+    animation:         fade_move_down 4s ease-in-out infinite;
+}
+
+
+/*animated scroll arrow animation*/
+@-webkit-keyframes fade_move_down {
+    0%   { -webkit-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { -webkit-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@-moz-keyframes fade_move_down {
+    0%   { -moz-transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { -moz-transform:translate(0,10px) rotate(45deg); opacity: 0; }
+}
+@keyframes fade_move_down {
+    0%   { transform:translate(0,-10px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { transform:translate(0,10px) rotate(45deg); opacity: 0; }
 }
 
 /* BENEFITS SECTION STYLE */
@@ -139,23 +156,33 @@ header {
 .benefits {
     display: flex;
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     flex-wrap: wrap;
+    align-items: center;
 }
 
 .benefits-container {
+    margin-top: -7.5em;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 3.5em 0;
+    align-items: flex-end;
 }
 
-.company-logo {
-    background-image: url("../../logo.svg");
-    width: 128px;
-    height: 128px;
-    background-repeat: no-repeat;
-    background-position: center;
+.section-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+}
+
+.section-title h1{
+    font-weight: 100;
+    font-size: 15vh;
+    margin: 0px;
+}
+
+.section-title h1:last-child {
+    transform: rotate(270deg);
+    margin: 1.2em 0 0;
 }
 
 .benefits-grid {
@@ -188,18 +215,24 @@ header {
 
 .carousel {
     display: flex;
-    flex-wrap: wrap;
-    height: 90vh;
-    justify-content: center;
+    align-items: center;
+    height: 100vh;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 76, 76, 0.5) 100%);
 }
 
 .carousel-container {
     display: flex;
+    flex-direction: row-reverse;
     width: 100%;
-    flex-direction: column;
-    flex-wrap: wrap;
     align-items: center;
+    margin-top: -7.5em;
+}
+
+.slider-container {
+    width: 65vw;
+    height: 55vh;
+    background: antiquewhite;
+    margin-top: 9.5em;
 }
 
 /* FOOTER STYLE */
